data/derived/sp14/progs/unify/prog0466.ml.out
Characters 150-156:
  if (randNum = 1 && randNum2 = 3) then buildX(rand) else
                                              ^^^^^^
Error: This expression has type int * int -> int
       but an expression was expected of type unit
